--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -39,6 +39,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100% ;
+
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #000;
@@ -72,6 +73,37 @@ body {
   .user-info {
     .thumbnail {
       margin-bottom: 0px;
+    }
+  }
+}
+
+/* Topic Index Page */
+.topics-index-page {
+  .topic-list {
+    .nav > li > a {
+      position: relative;
+      display: block;
+      padding: 5px 14px;
+      font-size: 0.9em;
+    }
+    a {
+      color: #444444;
+    }
+    .meta {
+      font-size:0.9em;
+      color: #b3b3b3;
+      a {
+        color: #b3b3b3;
+      }
+    }
+    .badge {
+      background-color: #d8d8d8;
+    }
+    hr {
+      margin-top: 12px;
+      margin-bottom: 12px;
+      border: 0;
+      border-top: 1px solid #dcebf5;
     }
   }
 }
