--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,6 +23,7 @@ body {
   border-top: 4px solid #00b5ad;
   margin-bottom: 40px;
   margin-top: 0px;
+
 }
 
 /* Sticky footer styles */
@@ -75,7 +76,38 @@ body {
       margin-bottom: 0px;
     }
   }
-}
+}.users-show-page {
+   .user-info {
+     .thumbnail {
+       margin-bottom: 0px;
+     }
+   }
+
+   .nav-tabs {
+     margin-bottom: 20px;
+
+     >li.active > a {
+       background-color: #fff;
+     }
+   }
+
+   .list-group {
+     .list-group-item {
+       border: none;
+       margin-bottom: 0px;
+       border-bottom: 1px solid #efefef;
+
+       .meta {
+         color: #b3b3b3;
+       }
+     }
+   }
+
+   .pagination {
+     margin: 12px 0;
+   }
+ }
+
 
 /* Topic Index Page */
 .topics-index-page, .categories-show-page  {
